# ArcEncryptor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: arc_encryptor.cpp  arc_encryptor.hpp  arc_utils.hpp
test/: CMakeLists.txt  example.txt  main.cpp
